# warmup

00/build-phonebook-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  phonebook  phonebook.cbp
00/build-phonebook-Desktop_Qt_5_14_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-c3d48d4f3d6f32b53509.json  cmakeFiles-v1-33da0c850af3737152ce.json  codemodel-v2-cc7f03943760739208f9.json  index-2024-07-10T00-37-19-0333.json  target-phonebook-Debug-cf15f6c7d7ef50615080.json
00/convert_string/: a.out  main.cpp
00/phonebook/: CMakeLists.txt  main.cpp  phonebook.cpp  phonebook.h
01/Orthodox/: CMakeLists.txt  car.cpp  car.h  main.cpp
01/SportsCar/: CMakeLists.txt  car.cpp  car.h  main.cpp  sportscar.cpp  sportscar.h
01/build-Orthodox-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  Orthodox  Orthodox.cbp  cmake_install.cmake
01/build-Orthodox-Desktop_Qt_5_14_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-a6a68a40e3fc24f0e501.json  cmakeFiles-v1-b8f0a06a24e2ef25b431.json  (+3 more)
01/build-SportsCar-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  SportsCar  SportsCar.cbp  cmake_install.cmake
02/ActualSmartPointer/: CMakeLists.txt  main.cpp
02/SmartPointer/: CMakeLists.txt  car.cpp  car.h  main.cpp  part.h
02/build-ActualSmartPointer-Desktop_Qt_5_14_2_GCC_64bit-Debug/: ActualSmartPointer  ActualSmartPointer.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
02/build-SmartPointer-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  SmartPointer  SmartPointer.cbp  cmake_install.cmake
(+15 files in other folders)
